# the-brownfield-cartographer

./: .gitignore  README.md  RECONNAISSANCE.md  cartography_trace.jsonl  pyproject.toml  requirements.txt
.cartography/: CODEBASE.md  cartography_trace.jsonl  last_run_commit.txt  lineage_graph.json  module_graph.json  onboarding_brief.md  semantic_day_one_answers.json
src/: cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/analyzers/lineage/: config_analyzer.py  python_analyzer.py  sql_analyzer.py
src/graph/: knowledge_graph.py  lineage_graph.py
src/models/: graph_nodes.py  module_node.py  navigator_schemas.py  semantic.py
src/utils/: trace.py
