[project]
name = "the-brownfield-cartographer"
version = "0.1.0"
description = "Static structural and data lineage cartography for brownfield repositories."
requires-python = ">=3.10"
dependencies = [
  "sqlglot>=25.0",
  "networkx>=3.2",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
  "tree-sitter-sql>=0.1",
  "tree-sitter-javascript>=0.21",
  "tree-sitter-typescript>=0.21",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.scripts]
brownfield-cartographer = "src.cli:app"

[tool.uv]
managed = true

